--- a/.vim/dein/dein.toml
+++ b/.vim/dein/dein.toml
@@ -9,6 +9,8 @@ repo = 'Townk/vim-autoclose'
 # colorscheme
 [[plugins]]
 repo = "tomasr/molokai"
+[[plugins]]
+repo = 'cocopon/iceberg.vim'
 #IDE っぽいディレクトリ表示
 [[plugins]]
 repo = "scrooloose/nerdtree"
@@ -24,8 +26,9 @@ repo = "Shougo/neosnippet-snippets"
 [[plugins]]
 repo = "nathanaelkane/vim-indent-guides"
 
+# 常にset Pasteモードになるようのプラグイン
 [[plugins]]
-repo = 'cocopon/iceberg.vim'
+repo = 'ConradIrwin/vim-bracketed-paste'
 
 [[plugins]]
 repo = "tpope/vim-fugitive"
